--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,7 +37,7 @@ body {
 .al-search-icon {
     z-index: 2;
     position: absolute;
-    top:-8px;
+    top: -8px;
     padding-left: 18px;
     font-size: 18px;
     color: rgb(110, 118, 125);
@@ -116,7 +116,7 @@ body {
 
 .al-signup-label {
     padding-left: 12px;
-    padding-top:12px;
+    padding-top: 12px;
 }
 
 .al-signup-input {
@@ -130,4 +130,38 @@ body {
     background-color: var(--background-light);
     border: 2px solid var(--border-color);
     height: 200px;
+}
+
+.al-comment-text {
+    margin-top:12px ;
+    color: var(--color-white);
+    background-color: var(--background-color);
+    border: 2px solid var(--border-color);
+    width: 100%;
+    height: 200px;
+}
+
+.al-rating-box {
+    background-color: var(--background-light);
+    border-radius: 12px;
+}
+
+.al-stars {
+    width: 100%;
+    color: var(--color-white);
+    background-color: var(--background-color);
+}
+
+.al-details-image {
+    width: 100%;
+}
+
+.al-login-signup {
+    background-color: var(--background-light);
+    border-radius: 12px;
+    padding: 12px
+}
+
+.wd-nav {
+    border-width:0;
 }
